tests/negative/parser/err_function_no_body.ual
-- Parser error test: function missing body
fn broken(x: i64) -> i64
-- missing function body
